# gransimg

./: .dir-locals.el  .gitignore  build.ninja  gransimg.c  meson.build
